Implement creating habits with tags
