# Dailo/Dailo.ClientApp/src/app/modules/habits/models/target.model.ts
@@ -1,0 +1,4 @@
+export interface TargetModel {
+  value: number;
+  unit: string;
+}
